# loom

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  dune-project  pyproject.toml
benchmarks/: run.py
configs/optimizations/: current.json
configs/triton/: default-v1.json
containers/bench/: Dockerfile
docs/: quickstart.md
docs/design/: language-specs.md  loom-design.md  optimizations.md
docs/tools/: loomc.md  tools-overview.md
examples/: dot.cpp  dot.py  dot_pipeline.ml  dune  l2_norm_sq.ml  l2_norm_sq.py  relu.py  relu_tupled.ml
experiments/: .gitignore  README.md
scripts/bench/: build-image.sh  ci-benchmark.sh  merge-publish-results.sh  pack-artifact.sh  publish-master-from-dev.sh  run-container.sh  run-in-container.sh  tea-dev-benchmark.sh
src/loom_backend_cuda/: cuda_analysis.ml  cuda_analysis.mli  cuda_backend.ml  cuda_backend.mli  cuda_plan.ml  cuda_plan.mli  dune
src/loom_backend_cuda_artifact/: dune  package.ml  package.mli
src/loom_backend_triton/: autotune_config.ml  autotune_config.mli  codegen.ml  codegen.mli  dune  manifest.ml  manifest.mli  triton_analysis.ml  triton_analysis.mli  triton_plan.ml  triton_plan.mli
src/loom_cli/: dune  main.ml
src/loom_core/: diagnostic.ml  diagnostic.mli  dune  front_ir.ml  front_ir.mli  kernel_plan.ml  kernel_plan.mli  kernel_plan_common.ml  loomLambda.ml  loomLambda.mli  loom_types.ml  loom_types.mli  optimization_config.ml  optimization_types.ml  optimizations.ml  optimizations.mli  pointwise_plan.ml  reduction_plan.ml  storage_pack.ml  tensor_ir.ml  tensor_ir.mli
(+334 files in other folders)
