[project]
name = "loom"
version = "0.1.0"
description = "Transparent OCaml/Python/C++-to-GPU compiler prototype"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib==3.10.7",
  "numpy==2.4.3",
  "torch==2.11.0+cu130",
  "torchaudio==2.11.0+cu130",
  "torchvision==0.26.0+cu130",
  "triton==3.6.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
